services/cluster-services/traefik/overlays/core/dashboard-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`core-traefik.nebulanet.xyz`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
